[tool.poetry]
name = "acmhelper"
version = "0.1.1"
description = "The helper for Acmer"
authors = ["CherryGS <tickten@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
acm = "AcmHelper.cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
